2005-03-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/font-config.cc (init_fontconfig): add
	prefix/{otf,type1,mf/out} to fontconfig path.

	* lily/main.cc: only look at one prefix directory, LILYPONDPREFIX
	overrides all. 

	* config.make (package_suffix): use lilypond/MAJOR.MINOR as install
	directory.

	* configure.in (gui_b): remove ec mftrace check

	* config.hh.in: use lilypond-Major.Minor as data directory.

	* scm/framework-ps.scm (dump-page): use output-units for landscape.

	* buildscripts/gen-emmentaler-scripts.py (i): lower case file
	name.

2005-03-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (do_chroot_jail): Small cleanups.  Avoid constant
	error messages.

	* flower/libc-extension.cc:
	* flower/include/libc-extension.hh: [Open]BSD fixes for
	cookie/funopen declarations.

2005-03-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* buildscripts/gen-emmentaler-scripts.py (outdir): capitalize
	emmentaler.

	* lily/score-engraver.cc (initialize): remove check for ecrm10 /
	lcrm10.

	* scm/define-markup-commands.scm (fontsize): new markup
	command. Also set baseline-skip

	* lily/main.cc (do_chroot_jail): paranoia security for webserver
	use. Patch by Sebastiano Vigna <vigna@dsi.unimi.it>.

2005-03-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/bin/add-html-footer.py (do_file): make wiki link optional.

	* lily/pdf.cc: remove PDF related files

2005-03-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/deutsch.ly: add quarter tones, patch by Arno Waschk.
	<hamamatsu@gmx.de>

2005-03-05  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/advanced-notation.itely: first draft
	of reorg done.

	* Documentation/user/global.itely: fixed (sub)section
	bits of MIDI.

2005-03-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/mknetrel (extras): Bufix (Bertalan).

	* Documentation/user/basic-notation.itely (Chords): @ref fix.
	* Documentation/user/instrument-notation.itely (Introducing chord
	names): Compile fix: must have unique name.
