@@ -1,5 +1,8 @@
 2005-03-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/pango-select.cc (select_pango_font): use ::find_pango_font,
+	so as to register the pango font.
+
 	* lily/font-config.cc (init_fontconfig): add
 	prefix/{otf,type1,mf/out} to fontconfig path.
 
